--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-  <a-qr-bill iban="CH00000000000000000000"></a-qr-bill>
+  <a-qr-bill iban="CH00000000000000000000" lang="en"></a-qr-bill>
 
   <script type="module" src="_dist/index.js"></script>
 </body>
