--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,8 @@
     debtor-street-plot="Anderestrasse 1"
     debtor-postcode-locality="0001 Anderestadt"
     currency="CHF"
-    amount="143250">
+    amount="143250"
+    additional-info="Rechnung #02021">
   </a-qr-bill>
 
   <script type="module" src="_dist/index.js"></script>
