--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     .data = JSON.stringify({
       lang: "de",
       currency: "CHF",
-      amount: "143250",
+      amount: 143275,
       iban: "CH1234567890123456789",
       reference: "RF18539007547034",
       creditor: {
@@ -54,7 +54,7 @@
         street: "Einerstrasse",
         streetNumber: "1E",
         postOfficeBox: "Postfach 8888",
-        postalCode: "1111",
+        postalCode: 1111,
         locality: "Einerstadt",
         countryCode: "CH"
       },
@@ -66,7 +66,7 @@
       },
       additionalInfo: {
         message: "Rechnung #02021",
-        code: ""
+        code: "//blub//blah n98189//supercool cool//code 827//f-internal use//wow"
       }
     })
   </script>
