--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,8 @@
       amount: 143275,
       iban: "CH1234567890123456789",
       reference: "RF18539007547034",
+      message: "Rechnung #02021",
+      messageCode: "//blub//blah n98189//supercool cool//code 827//f-internal use//wow",
       creditor: {
         name: "Kat Kitty",
         street: "Einerstrasse",
@@ -63,10 +65,6 @@
         street: "Zweierstrasse 2",
         locality: "2222 Zweierstadt",
         countryCode: "CH"
-      },
-      additionalInfo: {
-        message: "Rechnung #02021",
-        code: "//blub//blah n98189//supercool cool//code 827//f-internal use//wow"
       }
     })
   </script>
