--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
         street: "Einerstrasse",
         streetNumber: "1E",
         postOfficeBox: "Postfach 8888",
-        postalCode: 1111,
+        // postalCode: 1111,
         locality: "Einerstadt",
         countryCode: "CH"
       },
