--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       lang: "de",
       currency: "CHF",
       amount: 143275,
-      iban: "CH1234567890123456789",
+      iban: "CH8309000000877386350",
       reference: "RF18539007547034",
       message: "Rechnung #02021",
       messageCode: "//blub//blah n98189//supercool cool//code 827//f-internal use//wow",
@@ -56,7 +56,7 @@
         street: "Einerstrasse",
         streetNumber: "1E",
         postOfficeBox: "Postfach 8888",
-        // postalCode: 1111,
+        postalCode: 1111,
         locality: "Einerstadt",
         countryCode: "CH"
       },
