--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     .data = JSON.stringify({
       lang: "de",
       currency: "CHF",
-      amount: 143275,
+      amount: 1432.75,
       iban: "CH8309000000877386350",
       reference: "RF18539007547034",
       message: "Rechnung #02021",
@@ -63,6 +63,8 @@
       debtor: {
         name: "Dog Dodgy",
         street: "Zweierstrasse 2",
+        streetNumber: "5",
+        postOfficeBox: "Postfach",
         locality: "2222 Zweierstadt",
         countryCode: "CH"
       }
