--- a/public/index.html
+++ b/public/index.html
@@ -46,24 +46,24 @@
     .data = JSON.stringify({
       lang: "de",
       currency: "CHF",
-      amount: 19989.75,
-      iban: "CH8309000000877386350",
-      reference: "RF18539007547034",
-      message: "Rechnung #02021",
-      messageCode: "//blub//blah n98189//supercool cool//code 827//f-internal use//wow",
+      amount: 132,
+      iban: "CH1509000000152034087",
+      //reference: "RF18539007547034",
+      message: "Rechnung #02521",
+      //messageCode: "//blub//blah n98189//supercool cool//code 827//f-internal use//wow",
       creditor: {
-        name: "Kat Kitty",
-        street: "Einerstrasse",
-        streetNumber: "1E",
-        postOfficeBox: "Postfach 8888",
-        postalCode: 1111,
-        locality: "Einerstadt",
+        name: "Jérôme Imfeld",
+        street: "Grätzlistrasse",
+        streetNumber: "3",
+        //postOfficeBox: "Postfach 8888",
+        postalCode: 8152,
+        locality: "Opfikon",
         countryCode: "CH"
       },
       debtor: {
-        name: "Dog Dodgy",
-        street: "Zweierstrasse 2",
-        locality: "2222 Zweierstadt",
+        name: "Jungle Folk GmbH",
+        street: "Sihlquai 55",
+        locality: "8005 Zürich",
         countryCode: "CH"
       }
     })
