--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
   <script>
     document
     .getElementById('qr-bill')
-    .data = JSON.stringify({
+    .data = {
       lang: "de",
       currency: "CHF",
       amount: 87.75,
@@ -66,7 +66,7 @@
         locality: "8005 Zürich",
         countryCode: "CH"
       }
-    })
+    }
   </script>
 </body>
 </html>
