--- a/public/index.html
+++ b/public/index.html
@@ -27,24 +27,49 @@
     }
 
     body {
+      display: grid;
+      justify-content: center;
+      align-content: center;
+      height: 100vh;
       margin: 0;
+      overflow: hidden;
+      background-image: linear-gradient(#051527, darkslategrey);
     }
+
+    .wrapper {
+      position: relative;
+    }
+
+    .sheet{
+      position: absolute;
+      bottom: 0;
+      background-color: white;
+      width: 100%;
+      height: 297mm;
+      box-shadow: 
+        0 20px 13px rgba(0, 0, 0, 0.03),
+        0 8px 5px rgba(0, 0, 0, 0.08);
+    }
+
   </style>
 
 </head>
 <body>
 
-  <a-qr-bill 
-    id="qr-bill" 
-    version="1a">
-  </a-qr-bill>
+  <div class="wrapper">
+    <div class="sheet"></div>
+    <a-qr-bill 
+      id="qr-bill" 
+      version="1a">
+    </a-qr-bill>
+  </div>
 
   <script type="module" src="_dist/index.js"></script>
   <script>
     document
     .getElementById('qr-bill')
     .data = {
-      lang: "de",
+      lang: "it",
       currency: "CHF",
       amount: 87.75,
       iban: "CH1509000000152034087",
