--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
     </a-qr-bill>
   </div>
 
-  <script type="module" src="_dist/index.js"></script>
+  <script type="module" src="dist/index.js"></script>
   <script>
     document
     .getElementById('qr-bill')
