--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
     .data = {
       lang: "it",
       currency: "CHF",
-      amount: 87.75,
+      //amount: 87.75,
       iban: "CH1509000000152034087",
       //reference: "RF18539007547034",
       message: "Rechnung #02521",
