--- a/public/index.html
+++ b/public/index.html
@@ -81,9 +81,9 @@
     document
     .getElementById('qr-bill')
     .data = {
-      lang: "it",
+      lang: "de",
       currency: "CHF",
-      //amount: 87.75,
+      amount: 87.75,
       iban: "CH1509000000152034087",
       //reference: "RF18539007547034",
       message: "Rechnung #02521",
