refactor(component/demo): pass data by attributes only

--- a/public/demo/demo.html
+++ b/public/demo/demo.html
@@ -63,25 +63,14 @@
         0 8px 5px rgba(0, 0, 0, 0.08);
     }
 
-    .menu {
-      position: absolute;
-      left: 0;
-      bottom: 105mm;
-    }
-
   </style>
 
 </head>
 <body>
   <div class="wrapper">
-    <div class="sheet">
-      <div class="menu">
-        <a href="demo2">demo 2</a>
-      </div>
-    </div>
-    <a-qr-bill id="qr-bill"></a-qr-bill>
+    <div class="sheet"></div>
+    <the-app></the-app>
   </div>
-
-  <script type="module" src="demo1.js"></script>
+  <script type="module" src="demo.js"></script>
 </body>
 </html>
